style: fixes z-index issue

--- a/styles/AvatarStyles.module.css
+++ b/styles/AvatarStyles.module.css
@@ -4,6 +4,7 @@
   border-radius: 50%;
   object-fit: cover;
   border: 8px solid white;
+  z-index: 1;
 }
 
 .imageBackground {
@@ -17,7 +18,7 @@
 .imageBackground::before {
   content: '';
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   width: 320px;
   height: 320px;
   border-radius: 50%;
